metallb/metallb-controller-metrics_Service_metallb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: '7472'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: metallb
    helm.sh/chart: metallb-4.1.12
  name: metallb-controller-metrics
  namespace: metallb
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 7472
    protocol: TCP
    targetPort: 7472
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/name: metallb
  type: ClusterIP
