metallb/metallb-webhook-service_Service_metallb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: metallb
    app.kubernetes.io/version: 0.15.2
    helm.sh/chart: metallb-6.4.20
  name: metallb-webhook-service
  namespace: metallb
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/name: metallb
