metallb/metallb-speaker_NetworkPolicy_metallb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: speaker
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: metallb
    app.kubernetes.io/version: 0.15.2
    helm.sh/chart: metallb-6.4.20
  name: metallb-speaker
  namespace: metallb
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 7472
      protocol: TCP
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: speaker
      app.kubernetes.io/instance: metallb
      app.kubernetes.io/name: metallb
  policyTypes:
  - Ingress
  - Egress
